[gd_scene load_steps=15 format=3 uid="uid://cfo8abfi7e2no"]

[ext_resource type="Texture2D" uid="uid://chbybml00m3s8" path="res://assets/ui/controlbar-background.svg" id="1_qncii"]
[ext_resource type="Script" path="res://scenes/ui/focus_view_menu.gd" id="2_0ofne"]
[ext_resource type="Texture2D" uid="uid://dg10xa0macwvp" path="res://assets/ui/focus-view-buttons.png" id="2_i6ukn"]
[ext_resource type="Texture2D" uid="uid://chwbnvdklciby" path="res://assets/ui/focus-view-buttons-pressed.png" id="3_yaxha"]
[ext_resource type="Script" path="res://scenes/ui/InfoPanel.gd" id="5_y8hed"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hudri"]
atlas = ExtResource("2_i6ukn")
region = Rect2(41, 41, 171, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwjc1"]
atlas = ExtResource("3_yaxha")
region = Rect2(41, 41, 171, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nay2"]
atlas = ExtResource("2_i6ukn")
region = Rect2(256, 41, 171, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb672"]
atlas = ExtResource("3_yaxha")
region = Rect2(256, 41, 171, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qx85"]
atlas = ExtResource("2_i6ukn")
region = Rect2(484, 41, 171, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dlte"]
atlas = ExtResource("3_yaxha")
region = Rect2(481, 41, 171, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdrho"]
atlas = ExtResource("2_i6ukn")
region = Rect2(703, 41, 171, 171)

[sub_resource type="AtlasTexture" id="AtlasTexture_djh1s"]
atlas = ExtResource("3_yaxha")
region = Rect2(694, 41, 171, 171)

[sub_resource type="LabelSettings" id="LabelSettings_8u7gr"]
font_size = 32

[node name="FocusViewMenu" type="NinePatchRect"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -243.0
offset_right = 16.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_qncii")
patch_margin_left = 10
patch_margin_top = 142
patch_margin_right = 7
patch_margin_bottom = 8
script = ExtResource("2_0ofne")

[node name="MainContainer" type="MarginContainer" parent="."]
texture_filter = 6
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
alignment = 1

[node name="WorldViewButton" type="TextureButton" parent="MainContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_hudri")
texture_pressed = SubResource("AtlasTexture_dwjc1")
stretch_mode = 3

[node name="CreatureInfoButton" type="TextureButton" parent="MainContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_6nay2")
texture_pressed = SubResource("AtlasTexture_pb672")
stretch_mode = 3

[node name="ActionButton" type="TextureButton" parent="MainContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_4qx85")
texture_pressed = SubResource("AtlasTexture_4dlte")
stretch_mode = 3

[node name="EvolutionTreeButton" type="TextureButton" parent="MainContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = SubResource("AtlasTexture_wdrho")
texture_pressed = SubResource("AtlasTexture_djh1s")
stretch_mode = 3

[node name="InfoPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.979816
anchor_bottom = 0.945098
script = ExtResource("5_y8hed")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="GridContainer" type="GridContainer" parent="InfoPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
columns = 3

[node name="NameEntry" type="HBoxContainer" parent="InfoPanel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="InfoPanel/MarginContainer/GridContainer/NameEntry"]
layout_mode = 2
text = "Name:"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="Value" type="Label" parent="InfoPanel/MarginContainer/GridContainer/NameEntry"]
layout_mode = 2
text = "Value"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="BirthEntry" type="HBoxContainer" parent="InfoPanel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="InfoPanel/MarginContainer/GridContainer/BirthEntry"]
layout_mode = 2
text = "Birth:"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="Value" type="Label" parent="InfoPanel/MarginContainer/GridContainer/BirthEntry"]
layout_mode = 2
text = "Value"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="AgeEntry" type="HBoxContainer" parent="InfoPanel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="InfoPanel/MarginContainer/GridContainer/AgeEntry"]
layout_mode = 2
text = "Age:"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="Value" type="Label" parent="InfoPanel/MarginContainer/GridContainer/AgeEntry"]
layout_mode = 2
text = "Value"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="LifeStageEntry" type="HBoxContainer" parent="InfoPanel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="InfoPanel/MarginContainer/GridContainer/LifeStageEntry"]
layout_mode = 2
text = "Life Stage:"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="Value" type="Label" parent="InfoPanel/MarginContainer/GridContainer/LifeStageEntry"]
layout_mode = 2
text = "Value"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="HappinessEntry" type="HBoxContainer" parent="InfoPanel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="InfoPanel/MarginContainer/GridContainer/HappinessEntry"]
layout_mode = 2
text = "Happiness:"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="Value" type="Label" parent="InfoPanel/MarginContainer/GridContainer/HappinessEntry"]
layout_mode = 2
text = "Value"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="StrengthEntry" type="HBoxContainer" parent="InfoPanel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="InfoPanel/MarginContainer/GridContainer/StrengthEntry"]
layout_mode = 2
text = "Strength:"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="Value" type="Label" parent="InfoPanel/MarginContainer/GridContainer/StrengthEntry"]
layout_mode = 2
text = "Value"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="IntelligenceEntry" type="HBoxContainer" parent="InfoPanel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="InfoPanel/MarginContainer/GridContainer/IntelligenceEntry"]
layout_mode = 2
text = "Intelligence:"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="Value" type="Label" parent="InfoPanel/MarginContainer/GridContainer/IntelligenceEntry"]
layout_mode = 2
text = "Value"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="MistakesEntry" type="HBoxContainer" parent="InfoPanel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="InfoPanel/MarginContainer/GridContainer/MistakesEntry"]
layout_mode = 2
text = "Care Mistakes:"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="Value" type="Label" parent="InfoPanel/MarginContainer/GridContainer/MistakesEntry"]
layout_mode = 2
text = "Value"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="DeadEntry" type="HBoxContainer" parent="InfoPanel/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="InfoPanel/MarginContainer/GridContainer/DeadEntry"]
layout_mode = 2
text = "Is Dead:"
label_settings = SubResource("LabelSettings_8u7gr")

[node name="Value" type="Label" parent="InfoPanel/MarginContainer/GridContainer/DeadEntry"]
layout_mode = 2
text = "Value"
label_settings = SubResource("LabelSettings_8u7gr")

[connection signal="pressed" from="MainContainer/HBoxContainer/WorldViewButton" to="." method="_on_world_view_button_pressed"]
[connection signal="pressed" from="MainContainer/HBoxContainer/CreatureInfoButton" to="InfoPanel" method="_on_creature_info_button_pressed"]
[connection signal="pressed" from="MainContainer/HBoxContainer/ActionButton" to="." method="_on_action_button_pressed"]
